static/css/shared.css
html,body
{
  width: 100%;
  height: 100%;
  margin: 0vw;
  padding: 0vw;
  overflow-x: hidden; 
}

/*announcement starts*/
.bold-font{
  font-weight: 700;
}

#announcement{
  height: 5vw;
  font-weight: 400;
  width: 100%;
  background-color: #FAF6F5;
  color: #192126;
  text-align: center;
  padding-top: 1.250vw;
  font-size: 1.25vw;
}

#a-icon{
  margin-right: 0.938vw;
}

#underline{
  font-weight: 400;
  margin-left: 1.875vw;
  cursor: pointer;
  text-decoration: underline;
}

/*announcement ends*/

/*nav bar start*/
#nav-container {
  height: 6.250vw;
  width: 100%;
  background-color: #F26C34;
  color:#FAF6F5;
  padding-left: 3.750vw;
  padding-top: 1.250vw;
  z-index: 1000;
}

#nav-grid {
  display: flex;
  flex-direction: row;
  cursor: pointer;
  justify-content: space-between;
  /* delete this justify-content once online store is back */
}

#boheme-logo img{
  width: 9.609vw;
  height: auto;
  margin-right: 3.750vw;
}


.nav-item {
  font-family: "Arimo", sans-serif;
  font-size: 1.250vw;
  padding-top: 0.938vw;
  margin-right: 2.813vw;
  font-weight:700;
}

.nav-button {
  padding: 0.625vw 2.500vw;
  border-radius: 4.844vw;
  font-family: "Arimo", sans-serif;
  font-size: 1.250vw;
  cursor: pointer;
  font-weight: 700;
  margin-bottom: 0.938vw;
  outline: none;

}

#get-in-touch {
  background-color: #F26C34;
  border-color: #FAF6F5;
  color: #FAF6F5;
  margin-right: 1.25vw;
  border-style: solid;
}

#visit-store {
  background-color: #FAF6F5;
  color: #192126;
  display: flex;
  transition: all .3s ease;
  align-items: center;
  text-align: center;
  border: none;
  padding: 0.625vw 2.5vw;
  border-radius: 4.844vw;
  font-family: "Arimo", sans-serif;
  font-size: 1.25vw;
  border-color: #FAF6F5;
  cursor: pointer;
  font-weight: 700;
  margin-bottom: 0.938vw;
}


#visit-store > #arrow {
  width: 0.625vw;
  height: 0.625vw;
  border-right: 0.156vw solid #192126;
  border-bottom: 0.156vw solid #192126;
  position: relative;
  transform: rotate(-45deg);
  margin: 0 0.469vw;
  transition: all .3s ease;
}

#visit-store > #arrow::before {
  display: block;
  background-color: currentColor;
  width: 0.234vw;
  transform-origin: bottom right;
  height: 0.156vw;
  position: absolute;
  opacity: 0;
  bottom: calc(-0.156vw / 2);
  transform: rotate(45deg);
  transition: all .3s ease;
  content: "";
  right: 0;
}

#visit-store:hover > #arrow {
  transform: rotate(-45deg) translate(0.391vw, 0.391vw);
  border-color: text-hover-color;
}

.dropdown{
  overflow: visible;
  margin-left: -10px;
  margin-right: 24px;
  background-color: transparent;
  padding: none !important;
}

#dropdownMenuButton1{
  font-family: "Arimo", sans-serif;
  font-size: 1.250vw;
  font-weight:700;
  line-height: 2.500vw;
  letter-spacing: -0.024vw;
  border: none;
  outline: none;
  color: #FAF6F5;
  background-color: inherit;
  padding-top: 0.603vw !important;
}

.dropdown-item{
  font-family: "Arimo", sans-serif;
  font-size: 1.250vw;
  font-weight:700 !important;
  line-height: 2.500vw !important;
  letter-spacing: -0.024vw;
  color: black !important;
}


.dropdown-menu>li>a {
  float: none;
  color: black !important;
  text-decoration: none;
  display: block !important;
  text-align: left;
  z-index: 1000;
  height: 5.469vw;
  gap: 0.781vw;
  padding: 10px 20px !important;
}

.dropdown-menu > li > a:hover {
  background-image: none;
  background-color: #FDF5EB !important;
  
}
.dropdown-toggle::after {
  display: none;
}
.dropdown-menu {
  padding-top: 0 !important;
  padding-bottom: 0 !important;
}
#arrow-down{
  border: solid #FAF6F5;
  border-width: 0 0.234vw 0.234vw 0;
  display: inline-block;
  padding: 0.234vw;
  margin-left:0.781vw;
  margin-bottom: 0.234vw;
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}
.dropdown:hover .dropdown-menu {
  display: block;
  margin-top: -10px;
  width: 25.781vw;
  z-index: 1000;
}

.hiddens{
  display: flex !important;
  z-index: 1000;;
}

.nav-span{
  float: right;
  margin-left: 300px;

}
.dropbutn {
  background-image: url("/static/img/menu.png");
  background-size: cover;
  border: none;
  cursor: pointer;
  height: 3.906vw;
  width: 3.906vw;
  background-color: #F26C34;
  border-radius: 0.469vw;
  border: 1px solid black;
}

.dropdowns {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  margin-top: 4px;
  display: none;
  position: absolute;
  background-color: white;
  width: 300px;
  overflow: auto;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  right: 0;
  z-index: 1000;
  font-family: "Arimo", sans-serif;
  line-height: 2.500vw;
  letter-spacing: -0.024vw;
  color: black;
  font-size: 1.406vw;
  @media (max-width:720px){
    font-size: 12px;
  }
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover{background-color: #FDF5EB; color: black; text-decoration: none;}

.show {display: block;}

/*nav bar end*/

 /*footer start*/
 #footer {
  background: #F26C34;    
  color: #ffffff;
  padding-left:3.750vw;
  padding-top: 1.250vw;
  padding-bottom: 1.250vw;
  width: 100%;
}

#footer-top {
  /* padding-left: 1.875vw; */
  padding-bottom:2.5vw;
  padding-top: 1.875vw;
  /* padding-top: 1.875vw; new change */
  width:92.500vw;
  display: flex;
  flex-direction: row;
  border-bottom:0.156vw solid white;
}

#footer-info {
  width: 50%;
  height:8.125vw;
}

/*changed font*/
.bold-text-footer {
  color: #FFF;
  font-family: "Arimo", sans-serif;
  font-style: normal;
  font-size: 1.875vw;
  font-weight: 700;
  line-height:2.500vw;
  letter-spacing: -0.036vw;
  text-align: left;
}

.text-footer {
  font-family: "Mukta", sans-serif;
  font-size: 1.563vw;
  font-style: normal;
  font-weight: 400;
  line-height: 2.5vw; /* 160% */
  letter-spacing: -0.03vw;
  color: white;
  text-align: left;
}

.text-footer-right {
  padding-bottom: 1.875vw;
  cursor: pointer;
}


#email-footer {
  width: 50%;
  height:13.75vw;
  align-items: center;
  padding-top: 2.031vw;
}

#mc_embed_signup form{
  margin: 0px !important;
}

#mc_embed_signup input{
  background-color: #F26C34;
  color: white;
  border: none !important;
  border-bottom:0.156vw solid white !important;
  width: 27.578vw !important;
  height: 2.578vw;
  margin-left:3.125vw;
  margin-right: 1.563vw;
  margin-top: 0.938vw;
  border-radius: 0px !important;
}

#mc_embed_signup #mce-success-response{
  color: white !important;
  font-family: "Mukta", sans-serif;
  font-size: 1.563vw !important;
  width: 31.25vw;
}

#mc_embed_signup .button {
  color: #F26C34 !important;
  font-family: "Mukta", sans-serif;
  font-size: 1.563vw !important;
  font-style: normal;
  font-weight: 700 !important;
  line-height: 2.5vw !important; /* 160% */
  letter-spacing: -0.03vw;
  width:11.484vw !important;
  height:3.75vw !important;
  border-radius:4.844vw !important;
  border-color: #F26C34;
  border-style: solid;
  background-color: #FFF !important;
  cursor: pointer !important;
  border: none !important;
  padding: 0px !important;
}

#mc_embed_signup div#mce-responses{
    height: 3.125vw;
    color: white !important;
    font-family: "Mukta", sans-serif;
    font-size: 1.563vw !important;
    width: 31.25vw;
    
}

::placeholder {
  color: #FFF;
  font-family: "Mukta", sans-serif;
  font-size: 1.563vw;
  font-style: normal;
  font-weight: 400;
  line-height: 142.523%; /* 28.505px */
}


#footer-bottom {
  margin-top:2.500vw;
  display: flex;
  flex-direction: row;
  padding-bottom:2.500vw;
  /* padding-bottom:2.500vw;  new change */
}

#footer-logo-container {
  color: #FAFAFA;
  font-family: "Readex Pro", sans-serif;
  font-size:2.5vw;
  font-weight: 400;
  display: flex;
  flex-direction: row;
  margin-right:7.813vw;
  align-items: center;
  height: 7.031vw;
}

#footer-logo {
  width: 14.375vw;
  height: auto;
  margin-right: 1.250vw;
  filter: brightness(0) invert(1);
  cursor: pointer;
}

#footer-location-hours {
  margin-right: 9.766vw;
}

#footer-boheme {
  margin-right:3.125vw;
}

#footer-services {
  margin-right:3.125vw;
}

#footer-media {
  margin-right:3.125vw;
}

.footer-follow-us {
  display: flex;
  flex-direction: row;
}

.footer-icon {
  width:3.906vw;
  height: auto;
}

/* new change */
#copyright-footer{
  text-align: center;
  font-family: "Mukta",sans-serif;
  font-size: 1.406vw;
  font-style: normal;
  font-weight: 400;
  line-height: 2.5vw; /* 200% */
  letter-spacing: -0.024vw;
  padding-bottom: 1.250vw;
  text-transform: capitalize;
}

#copyright{
  width: 1.016vw;
  height: 1.094vw;
}

/*footer end*/

  @media (max-width:720px){
    .hiddens{
      display: none !important;
    }
    #nav-grid{
      padding-right: 5%;
    }
  }

  @media (min-width:720px){
    .nav-span{
      display: none;
    }
    #nav-grid{
      padding-right: 5%;
    }
  }

  @media (max-width:480px) {
    .nav-span{
      margin-left: 300px !important;
    }
    .dropdown-content{
      width: 150px !important;
    }
    #nav-container{
      height: 36px !important;
    }
    #nav-grid{
      padding-right: 5%;
    }
  }

